# GPU-Programming-Labs

./: .gitignore  README.md
Assignment_2/: CMakeLists.txt
Assignment_2/ex_1/: exercise_1.cu
Assignment_2/ex_3/: exercise_3.cu
Assignment_2/ex_bonus/: exercise_bonus.cu
Assignment_3/: CMakeLists.txt
Assignment_3/ex_1/: hw3_ex1.cu
Assignment_3/ex_2/: exercise_2a.cu
Assignment_3/ex_3/: hw3_ex3.cu
Assignment_3/ex_bonus/: exercise_bonus.cu
Assignment_4/: .gitignore  CMakeLists.txt
Assignment_4/ex_1/: exercise_1.cpp
Assignment_4/ex_2/: exercise_2.cpp
Assignment_4/ex_3/: exercise_3.c
Assignment_4/ex_bonus/: exercise_bonus.c
lab-1/: .gitignore  CMakeLists.txt  bonus_exercise.cu  exercise_1.cu  exercise_2.cu  exercise_3.cu
